--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,15 @@
 <!doctype html>
 <html>
 <head>
-    <base href="/">
-    <title>angularbookmarks</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Angularbookmarks</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
-    <my-app>Loading...</my-app>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="systemjs.config.js"></script>
-    <script>
-        System.import('app').catch(function(err) { console.error(err); });
-    </script>
+  <app-root>Loading...</app-root>
 </body>
 </html>
